# imtui-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
scripts/: get-chat-logs.sh  watch.sh
src/: CMakeLists.txt  main.cpp
